--- a/yacut/templates/500.html
+++ b/yacut/templates/500.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} 
 {% block title %} Ошибка сервера {% endblock %} 
 {% block content %}
-Ошибка сервера
+    <p class="text-center my-4">
+        Ошибка сервера
+    </p>
 {% endblock %}
