--- a/yacut/templates/404.html
+++ b/yacut/templates/404.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} 
 {% block title %} Страницы нет {% endblock %} 
 {% block content %}
-Страницы нет!
+    <p class="text-center my-4">
+        Такой страницы нет
+    </p>
 {% endblock %}
