--- a/yacut/templates/404.html
+++ b/yacut/templates/404.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} 
-{% block title %} Страницы нет {% endblock %} 
+{% block title %} 404 - Страница не найдена {% endblock %} 
 {% block content %}
-    <p class="text-center my-4">
-        Такой страницы нет
-    </p>
+    <div style="width: 80%; margin: 0 auto; text-align: center; padding: 80px;">
+        <h1 class="text-center my-4" style="font-size: 7em; color: #333;">404</h1>
+        <p class="text-center my-4" style="font-size: 5em; color: #666;">Страница не найдена</p>
+    </div>
 {% endblock %}
