--- a/yacut/templates/500.html
+++ b/yacut/templates/500.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %} 
 {% block title %} Ошибка сервера {% endblock %} 
 {% block content %}
-    <p class="text-center my-4">
-        Ошибка сервера
-    </p>
+    <div style="width: 80%; margin: 0 auto; text-align: center; padding: 80px;">
+        <h1 class="text-center my-4" style="font-size: 7em; color: #333;">500</h1>
+        <p class="text-center my-4" style="font-size: 5em; color: #666;">Ошибка сервера</p>
+    </div>
 {% endblock %}
